// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoRegressionStack not a function 1`] = `
"Property failed after 1 tests
{ seed: 42, path: "0:0", endOnFailure: true }
Counterexample: [0]
Shrunk 1 time(s)
Got TypeError: v is not a function
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:26:14
    at Property.p [as predicate] (packages/fast-check/src/check/property/Property.ts:23:56)
    at Property.predicate [as run] (packages/fast-check/src/check/property/Property.generic.ts:136:27)
    at run (packages/fast-check/src/check/runner/Runner.ts:37:26)
    at runIt (packages/fast-check/src/check/runner/Runner.ts:154:7)
    at Object.check (packages/fast-check/src/check/runner/Runner.ts:206:15)
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:40:7
    at _toThrowErrorMatchingSnapshot (node_modules/jest-snapshot/build/index.js:?:?)
    at Object.toThrowErrorMatchingSnapshot (node_modules/jest-snapshot/build/index.js:?:?)
    at __EXTERNAL_MATCHER_TRAP__ (node_modules/expect/build/index.js:?:?)
    at Object.throwingMatcher [as toThrowErrorMatchingSnapshot] (node_modules/expect/build/index.js:?:?)
    at Object.<anonymous> (packages/fast-check/test/e2e/NoRegressionStack.spec.ts:31:7)"
`;

exports[`NoRegressionStack throw 1`] = `
"Property failed after 2 tests
{ seed: 42, path: "1:0:1:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0", endOnFailure: true }
Counterexample: [0,1]
Shrunk 32 time(s)
Got error: a must be >= b
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:12:21
    at Property.p [as predicate] (packages/fast-check/src/check/property/Property.ts:23:56)
    at Property.predicate [as run] (packages/fast-check/src/check/property/Property.generic.ts:136:27)
    at run (packages/fast-check/src/check/runner/Runner.ts:37:26)
    at runIt (packages/fast-check/src/check/runner/Runner.ts:154:7)
    at Object.check (packages/fast-check/src/check/runner/Runner.ts:206:15)
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:40:7
    at _toThrowErrorMatchingSnapshot (node_modules/jest-snapshot/build/index.js:?:?)
    at Object.toThrowErrorMatchingSnapshot (node_modules/jest-snapshot/build/index.js:?:?)
    at __EXTERNAL_MATCHER_TRAP__ (node_modules/expect/build/index.js:?:?)
    at Object.throwingMatcher [as toThrowErrorMatchingSnapshot] (node_modules/expect/build/index.js:?:?)
    at Object.<anonymous> (packages/fast-check/test/e2e/NoRegressionStack.spec.ts:18:7)"
`;
